[gd_scene load_steps=9 format=3 uid="uid://bkwtw1rab5h40"]

[ext_resource type="Script" uid="uid://cuwqh6hi8201v" path="res://enemy_3d.gd" id="1_50168"]
[ext_resource type="PackedScene" uid="uid://nnfw1nyjjv1p" path="res://Assets/models/enemy/enemy.gltf" id="2_3skgh"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jd4mk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_40k38"]
albedo_color = Color(1, 0, 0, 1)
metallic_specular = 1.0
roughness = 0.44

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_881nf"]
radius = 1.6775
height = 7.87073

[sub_resource type="CylinderShape3D" id="CylinderShape3D_j6arw"]
height = 6.10823
radius = 22.9751

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5h6lu"]
radius = 1.31795
height = 6.09959

[sub_resource type="SphereShape3D" id="SphereShape3D_gc1u6"]
radius = 1.16211

[node name="Enemy3D" type="CharacterBody3D" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.10113, 0.00980449)
script = ExtResource("1_50168")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="AuxScene" parent="." instance=ExtResource("2_3skgh")]
transform = Transform3D(0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 0, 0, 0)

[node name="Skeleton3D" parent="AuxScene/Node" index="0"]
bones/0/position = Vector3(0.504994, 95.9685, 0.532629)
bones/0/rotation = Quaternion(-0.0312733, -0.0464969, -0.0300574, 0.997976)
bones/1/rotation = Quaternion(-0.0196869, 0.0115621, 0.023521, 0.999463)
bones/2/rotation = Quaternion(0.0100908, 0.00146551, 0.0137931, 0.999853)
bones/3/rotation = Quaternion(0.0585488, 0.00235129, 0.0137412, 0.998187)
bones/4/rotation = Quaternion(0.0490773, -0.000929679, 0.00389872, 0.998787)
bones/5/rotation = Quaternion(-0.0659583, 0.0118847, -0.00152377, 0.997751)
bones/11/rotation = Quaternion(0.703527, 0.295741, -0.50594, 0.40201)
bones/12/rotation = Quaternion(0.355217, 0.13088, 0.108, 0.919254)
bones/13/rotation = Quaternion(2.08616e-07, -0.0023863, 0.0125096, 0.999919)
bones/14/rotation = Quaternion(0.0465203, -0.282682, -0.0142174, 0.957979)
bones/15/rotation = Quaternion(0.181938, -0.00658862, -0.0344751, 0.982683)
bones/16/rotation = Quaternion(0.181388, 8.36444e-08, -0.0185821, 0.983236)
bones/17/rotation = Quaternion(0.155213, 5.87024e-08, -0.0159007, 0.987753)
bones/19/rotation = Quaternion(0.135184, -0.00634967, -0.0260902, 0.990457)
bones/20/rotation = Quaternion(0.151255, 4.33647e-08, -0.0154951, 0.988373)
bones/21/rotation = Quaternion(0.159933, 1.55153e-07, -0.0163838, 0.986992)
bones/23/rotation = Quaternion(0.064781, -0.00613186, 0.00542621, 0.997866)
bones/24/rotation = Quaternion(0.151079, -4.29209e-08, -0.015477, 0.988401)
bones/25/rotation = Quaternion(0.0700821, 1.73823e-08, -0.00717948, 0.997515)
bones/27/rotation = Quaternion(0.182839, 0.0867094, 0.239442, 0.949589)
bones/28/rotation = Quaternion(-0.0577549, 0.108703, -0.262949, 0.956925)
bones/29/rotation = Quaternion(-0.121529, -0.0739948, -0.0224184, 0.989572)
bones/31/rotation = Quaternion(0.702508, -0.293002, 0.524634, 0.381302)
bones/32/rotation = Quaternion(0.281939, -0.219259, -0.131351, 0.924761)
bones/33/rotation = Quaternion(-2.23517e-08, 0.0109394, -0.0573466, 0.998294)
bones/34/rotation = Quaternion(0.0588611, 0.170854, 0.015977, 0.983407)
bones/35/rotation = Quaternion(0.185067, -0.077439, -0.257195, 0.945306)
bones/36/rotation = Quaternion(-0.0484906, -0.101244, 0.298649, 0.947738)
bones/37/rotation = Quaternion(-0.158156, 0.0815807, 0.0326361, 0.983497)
bones/39/rotation = Quaternion(0.0581003, 0.00582466, -0.00801689, 0.998262)
bones/40/rotation = Quaternion(0.151288, 4.33065e-08, 0.0123192, 0.988413)
bones/41/rotation = Quaternion(0.0702164, 4.91273e-08, 0.00571802, 0.997515)
bones/43/rotation = Quaternion(0.129185, 0.00618574, 0.0220511, 0.991356)
bones/44/rotation = Quaternion(0.151541, 3.58559e-08, 0.0123399, 0.988374)
bones/45/rotation = Quaternion(0.16024, 2.88128e-08, 0.0130488, 0.986992)
bones/47/rotation = Quaternion(0.176153, 0.00641811, 0.0294749, 0.983901)
bones/48/rotation = Quaternion(0.181736, -6.61239e-08, 0.0147988, 0.983236)
bones/49/rotation = Quaternion(0.155511, -3.74857e-08, 0.0126633, 0.987753)
bones/51/rotation = Quaternion(0.130817, 0.132107, 0.978644, -0.0877002)
bones/52/rotation = Quaternion(-0.238377, -0.0141108, 0.0365819, 0.970381)
bones/53/rotation = Quaternion(0.5349, -0.134029, 0.0908517, 0.829255)
bones/54/rotation = Quaternion(0.291929, -0.0997567, -0.0215613, 0.950979)
bones/56/rotation = Quaternion(-0.0909817, 0.0334172, 0.995093, -0.0199109)
bones/57/rotation = Quaternion(-0.183769, 0.0830256, -0.0306904, 0.978976)
bones/58/rotation = Quaternion(0.571618, 0.135783, -0.118547, 0.800476)
bones/59/rotation = Quaternion(0.310335, 0.106285, 0.0214947, 0.944422)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_jd4mk")
surface_material_override/0 = SubResource("StandardMaterial3D_40k38")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.195876, -0.897534, 0)
shape = SubResource("CapsuleShape3D_881nf")

[node name="AttackRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("CylinderShape3D_j6arw")

[node name="Attack" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.353034, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0293885, -0.96374, 0)
shape = SubResource("CapsuleShape3D_5h6lu")

[node name="DamageArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.771835, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0931502, 0.68565, 0.0190907)
shape = SubResource("SphereShape3D_gc1u6")

[editable path="AuxScene"]
